--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   },
   "homepage": "https://github.com/ideatosrl/ethereum-development-course#readme",
   "devDependencies": {
-    "truffle": "^5.0.0-beta.0"
+    "truffle": "4.1.14"
   }
 }
