--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Material for a Ethereum Development Course",
   "main": "index.js",
   "scripts": {
+    "precommit": "lint-staged",
     "test": "truffle test"
   },
   "repository": {
@@ -21,7 +22,22 @@
     "url": "https://github.com/ideatosrl/ethereum-development-course/issues"
   },
   "homepage": "https://github.com/ideatosrl/ethereum-development-course#readme",
+  "lint-staged": {
+      "*.js": ["standard --fix", "git add"]
+  },
   "devDependencies": {
+    "husky": "0.14.3",
+    "lint-staged": "7.2.2",
+    "standard": "12.0.1",
     "truffle": "4.1.14"
+  },
+  "standard": {
+    "globals": [
+      "contract",
+      "beforeEach",
+      "it",
+      "assert",
+      "artifacts"
+    ]
   }
 }
