--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
   },
   "homepage": "https://github.com/ideatosrl/ethereum-development-course#readme",
   "lint-staged": {
-      "*.js": ["standard --fix", "git add"]
+    "*.js": [
+      "standard --fix",
+      "git add"
+    ]
   },
   "devDependencies": {
     "husky": "0.14.3",
     "lint-staged": "7.2.2",
     "standard": "12.0.1",
-    "truffle": "4.1.14"
+    "truffle": "5.0.0-beta.0"
   },
   "standard": {
     "globals": [
@@ -37,7 +40,8 @@
       "beforeEach",
       "it",
       "assert",
-      "artifacts"
+      "artifacts",
+      "web3"
     ]
   }
 }
