--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "precommit": "lint-staged",
-    "test": "truffle test"
+    "test": "truffle test",
+    "local-node": "ganache-cli"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
     ]
   },
   "devDependencies": {
+    "ganache-cli": "^6.1.8",
     "husky": "0.14.3",
     "lint-staged": "7.2.2",
     "standard": "12.0.1",
