--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Material for a Ethereum Development Course",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server",
     "precommit": "lint-staged",
     "test": "truffle test",
     "local-node": "ganache-cli",
@@ -33,11 +34,21 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.0.1",
+    "@babel/preset-env": "7.0.0",
+    "babel-loader": "8.0.2",
+    "babel-plugin-transform-custom-element-classes": "0.1.0",
     "ganache-cli": "^6.1.8",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "husky": "0.14.3",
     "lint-staged": "7.2.2",
+    "regenerator-runtime": "^0.12.1",
     "standard": "12.0.1",
-    "truffle": "5.0.0-beta.0"
+    "truffle": "5.0.0-beta.0",
+    "webpack": "^4.19.0",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.8"
   },
   "standard": {
     "globals": [
@@ -46,10 +57,12 @@
       "it",
       "assert",
       "artifacts",
-      "web3"
+      "web3",
+      "HTMLElement"
     ]
   },
   "dependencies": {
+    "navigo": "^7.1.2",
     "openzeppelin-solidity": "^1.12.0"
   }
 }
