--- a/package.json
+++ b/package.json
@@ -63,7 +63,10 @@
     ]
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "navigo": "^7.1.2",
-    "openzeppelin-solidity": "^1.12.0"
+    "openzeppelin-solidity": "^1.12.0",
+    "truffle-contract": "^3.0.6",
+    "web3": "^1.0.0-beta.36"
   }
 }
