--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "babel-polyfill": "^6.26.0",
     "navigo": "^7.1.2",
     "openzeppelin-solidity": "^1.12.0",
+    "sweetalert2": "^7.26.29",
     "truffle-contract": "^3.0.6",
     "web3": "^1.0.0-beta.36"
   }
