--- a/package.json
+++ b/package.json
@@ -35,24 +35,33 @@
       "git add"
     ]
   },
+  "dependencies": {
+    "babel-polyfill": "6.26.0",
+    "lodash.get": "4.4.2",
+    "navigo": "7.1.2",
+    "openzeppelin-solidity": "1.12.0",
+    "sweetalert2": "7.26.29",
+    "truffle-contract": "3.0.6",
+    "web3": "1.0.0-beta.36"
+  },
   "devDependencies": {
-    "@babel/core": "^7.0.1",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/core": "7.0.1",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0",
     "@babel/preset-env": "7.0.0",
-    "babel-eslint": "^9.0.0",
+    "babel-eslint": "9.0.0",
     "babel-loader": "8.0.2",
     "babel-plugin-transform-custom-element-classes": "0.1.0",
-    "ganache-cli": "^6.1.8",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
+    "ganache-cli": "6.1.8",
+    "html-loader": "0.5.5",
+    "html-webpack-plugin": "3.2.0",
     "husky": "0.14.3",
     "lint-staged": "7.2.2",
-    "regenerator-runtime": "^0.12.1",
+    "regenerator-runtime": "0.12.1",
     "standard": "12.0.1",
     "truffle": "5.0.0-beta.0",
-    "webpack": "^4.19.0",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.8"
+    "webpack": "4.19.0",
+    "webpack-cli": "3.1.0",
+    "webpack-dev-server": "3.1.8"
   },
   "standard": {
     "parser": "babel-eslint",
@@ -66,13 +75,5 @@
       "HTMLElement",
       "import"
     ]
-  },
-  "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "navigo": "^7.1.2",
-    "openzeppelin-solidity": "^1.12.0",
-    "sweetalert2": "^7.26.29",
-    "truffle-contract": "^3.0.6",
-    "web3": "^1.0.0-beta.36"
   }
 }
