--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "truffle compile",
     "precommit": "lint-staged",
     "test": "truffle test",
+    "cleanup-node": "rm -rf .db",
     "local-node": "mkdir -p .db && ganache-cli --db .db",
     "web3-console": "truffle console --network local",
     "deploy-local": "truffle deploy --reset --network local"
