--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
+    "build-web": "webpack --metamask",
     "build": "truffle compile",
     "precommit": "lint-staged",
     "test": "truffle test",
